modal: Fix delete button focus outline cutoff in todo/poll widget.
This commit adds a padding so that the focus outline is visible
completely without being cutoff.

Fixes:zulip#32950.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -514,6 +514,7 @@
             height: 0;
             overflow: auto;
             flex-grow: 1;
+            padding-top: 2px;
             padding-right: 16px;
 
             .option-row {
